WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15296
REGRESSION (
r19716
-
r19719
): width not specified for <marquee> tag is causing the alignment issue.
https://bugs.webkit.org/show_bug.cgi?id=15296
Summary
REGRESSION (r19716-r19719): width not specified for <marquee> tag is causing ...
Anantha Keesara
Reported
2007-09-27 07:27:56 PDT
Steps: 1. Go to
http://phoenixtv.com
Issue: Notice that marquee text on the right side is displayed below the blue block, causing misalignment. Observation: width not specified for <marquee> tag is causing the alignment issue. Other browsers: IE, FF, Opera has no issue.
Attachments
width not specified for <marquee> tag is causing the alignment issue.
(720 bytes, text/html)
2007-09-27 07:30 PDT
,
Anantha Keesara
no flags
Details
Expected image (Safari 2.0.4 (419.3) with original WebKit)
(43.60 KB, image/png)
2007-09-27 14:01 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Actual image (Safari 3 Public Beta v. 3.0.3 (522.12.1) with local debug build of WebKit r25776)
(43.31 KB, image/png)
2007-09-27 14:03 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Allow <marquee> to shrink to avoid floats
(33.25 KB, patch)
2007-09-27 15:08 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anantha Keesara
Comment 1
2007-09-27 07:30:41 PDT
Created
attachment 16415
[details]
width not specified for <marquee> tag is causing the alignment issue.
Gavin Sherlock
Comment 2
2007-09-27 07:57:25 PDT
This is a regression, as it works fine in released Safari on Mac 10.4.10, but fails in
r25464
. Should be all platforms, and a P1.
David Kilzer (:ddkilzer)
Comment 3
2007-09-27 10:40:01 PDT
<
rdar://problem/5509267
>
David Kilzer (:ddkilzer)
Comment 4
2007-09-27 10:56:51 PDT
External autospade says: Works:
r19713
Fails:
r19729
David Kilzer (:ddkilzer)
Comment 5
2007-09-27 11:07:51 PDT
Internal autospade says: Works:
r19716
Fails:
r19719
mitz
Comment 6
2007-09-27 12:22:05 PDT
<
http://trac.webkit.org/projects/webkit/changeset/19717
>
David Kilzer (:ddkilzer)
Comment 7
2007-09-27 14:01:50 PDT
Created
attachment 16420
[details]
Expected image (Safari 2.0.4 (419.3) with original WebKit)
David Kilzer (:ddkilzer)
Comment 8
2007-09-27 14:03:03 PDT
Created
attachment 16421
[details]
Actual image (Safari 3 Public Beta v. 3.0.3 (522.12.1) with local debug build of WebKit
r25776
)
mitz
Comment 9
2007-09-27 15:08:56 PDT
Created
attachment 16422
[details]
Allow <marquee> to shrink to avoid floats This patch specifically reverts the effect of
r19717
on <marquee>s, thus correcting the regression. However, the new-old behavior is not quite right, as you can see if you omit the div just outside the marquee in the layout test. If you do that, the marquee will have the wrong width.
Darin Adler
Comment 10
2007-10-04 09:26:14 PDT
Comment on
attachment 16422
[details]
Allow <marquee> to shrink to avoid floats Looks fine to me, but really should be reviewed by Hyatt.
Dave Hyatt
Comment 11
2007-10-16 10:43:01 PDT
Comment on
attachment 16422
[details]
Allow <marquee> to shrink to avoid floats r=me
Mark Rowe (bdash)
Comment 12
2007-10-16 20:46:57 PDT
Mitz landed this in
r26674
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug