WebCore:

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15296
          REGRESSION (r19716-r19719): width not specified for <marquee> tag is causing the alignment issue.

        Test: fast/block/float/marquee-shrink-to-avoid-floats.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::shrinkToAvoidFloats): Changed to return 'true' for <marquee>s with auto width.

LayoutTests:

        Reviewed by Dave Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15296
          REGRESSION (r19716-r19719): width not specified for <marquee> tag is causing the alignment issue.

        * fast/block/float/marquee-shrink-to-avoid-floats.html: Added.
        * platform/mac/fast/block: Added.
        * platform/mac/fast/block/float: Added.
        * platform/mac/fast/block/float/marquee-shrink-to-avoid-floats-expected.checksum: Added.
        * platform/mac/fast/block/float/marquee-shrink-to-avoid-floats-expected.png: Added.
        * platform/mac/fast/block/float/marquee-shrink-to-avoid-floats-expected.txt: Added.



Canonical link: https://commits.webkit.org/20632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26674 268f45cc-cd09-0410-ab3c-d52691b4dbfc