WebCore/rendering/RenderObject.cpp
@@ -2927,7 +2927,7 @@ bool RenderObject::shrinkToAvoidFloats() const
     // FIXME: Technically we should be able to shrink replaced elements on a line, but this is difficult to accomplish, since this
     // involves doing a relayout during findNextLineBreak and somehow overriding the containingBlockWidth method to return the
     // current remaining width on a line.
-    if (isInline() || !avoidsFloats())
+    if (isInline() && !isHTMLMarquee() || !avoidsFloats())
         return false;
 
     // All auto-width objects that avoid floats should always use lineWidth.
